// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReviewForm Should render all disabled while submitting 1`] = `
<form
  action="#"
  className="add-review__form"
  onSubmit={[Function]}
>
  <div
    className="rating"
  >
    <div
      className="rating__stars"
    >
      <input
        checked={false}
        className="rating__input"
        disabled={true}
        id="star-0"
        name="rating"
        onChange={[Function]}
        type="radio"
        value="0"
      />
      <label
        className="visually-hidden rating__label"
        htmlFor="star-0"
      >
        Rating 
        0
      </label>
      <input
        checked={false}
        className="rating__input"
        disabled={true}
        id="star-1"
        name="rating"
        onChange={[Function]}
        type="radio"
        value="1"
      />
      <label
        className="rating__label"
        htmlFor="star-1"
      >
        Rating 
        1
      </label>
      <input
        checked={true}
        className="rating__input"
        disabled={true}
        id="star-2"
        name="rating"
        onChange={[Function]}
        type="radio"
        value="2"
      />
      <label
        className="rating__label"
        htmlFor="star-2"
      >
        Rating 
        2
      </label>
      <input
        checked={false}
        className="rating__input"
        disabled={true}
        id="star-3"
        name="rating"
        onChange={[Function]}
        type="radio"
        value="3"
      />
      <label
        className="rating__label"
        htmlFor="star-3"
      >
        Rating 
        3
      </label>
      <input
        checked={false}
        className="rating__input"
        disabled={true}
        id="star-4"
        name="rating"
        onChange={[Function]}
        type="radio"
        value="4"
      />
      <label
        className="rating__label"
        htmlFor="star-4"
      >
        Rating 
        4
      </label>
      <input
        checked={false}
        className="rating__input"
        disabled={true}
        id="star-5"
        name="rating"
        onChange={[Function]}
        type="radio"
        value="5"
      />
      <label
        className="rating__label"
        htmlFor="star-5"
      >
        Rating 
        5
      </label>
    </div>
  </div>
  <div
    className="add-review__text"
  >
    <textarea
      className="add-review__textarea"
      disabled={true}
      id="review-text"
      name="review-text"
      onChange={[Function]}
      placeholder="Review text"
      value="A good review includes enough detail to give others a feel for what happened."
    />
    <div
      className="add-review__submit"
    >
      <button
        className="add-review__btn"
        disabled={true}
        type="submit"
      >
        Post
      </button>
    </div>
  </div>
</form>
`;

exports[`ReviewForm Should render error message when submit failed with error status 401 1`] = `
<form
  action="#"
  className="add-review__form"
  onSubmit={[Function]}
>
  <p
    className="error-message"
    style={
      Object {
        "color": "red",
      }
    }
  >
    Sorry, you have to be authorized for that!
  </p>
  <div
    className="rating"
  >
    <div
      className="rating__stars"
    >
      <input
        checked={false}
        className="rating__input"
        id="star-0"
        name="rating"
        onChange={[Function]}
        type="radio"
        value="0"
      />
      <label
        className="visually-hidden rating__label"
        htmlFor="star-0"
      >
        Rating 
        0
      </label>
      <input
        checked={false}
        className="rating__input"
        id="star-1"
        name="rating"
        onChange={[Function]}
        type="radio"
        value="1"
      />
      <label
        className="rating__label"
        htmlFor="star-1"
      >
        Rating 
        1
      </label>
      <input
        checked={false}
        className="rating__input"
        id="star-2"
        name="rating"
        onChange={[Function]}
        type="radio"
        value="2"
      />
      <label
        className="rating__label"
        htmlFor="star-2"
      >
        Rating 
        2
      </label>
      <input
        checked={false}
        className="rating__input"
        id="star-3"
        name="rating"
        onChange={[Function]}
        type="radio"
        value="3"
      />
      <label
        className="rating__label"
        htmlFor="star-3"
      >
        Rating 
        3
      </label>
      <input
        checked={false}
        className="rating__input"
        id="star-4"
        name="rating"
        onChange={[Function]}
        type="radio"
        value="4"
      />
      <label
        className="rating__label"
        htmlFor="star-4"
      >
        Rating 
        4
      </label>
      <input
        checked={true}
        className="rating__input"
        id="star-5"
        name="rating"
        onChange={[Function]}
        type="radio"
        value="5"
      />
      <label
        className="rating__label"
        htmlFor="star-5"
      >
        Rating 
        5
      </label>
    </div>
  </div>
  <div
    className="add-review__text"
  >
    <textarea
      className="add-review__textarea"
      id="review-text"
      name="review-text"
      onChange={[Function]}
      placeholder="Review text"
      value="A good review includes enough detail to give others a feel for what happened."
    />
    <div
      className="add-review__submit"
    >
      <button
        className="add-review__btn"
        disabled={false}
        type="submit"
      >
        Post
      </button>
    </div>
  </div>
</form>
`;

exports[`ReviewForm Should render error message when submit failed with other error status 1`] = `
<form
  action="#"
  className="add-review__form"
  onSubmit={[Function]}
>
  <p
    className="error-message"
    style={
      Object {
        "color": "red",
      }
    }
  >
    Oops! Something goes wrong... Please, try again.
  </p>
  <div
    className="rating"
  >
    <div
      className="rating__stars"
    >
      <input
        checked={false}
        className="rating__input"
        id="star-0"
        name="rating"
        onChange={[Function]}
        type="radio"
        value="0"
      />
      <label
        className="visually-hidden rating__label"
        htmlFor="star-0"
      >
        Rating 
        0
      </label>
      <input
        checked={false}
        className="rating__input"
        id="star-1"
        name="rating"
        onChange={[Function]}
        type="radio"
        value="1"
      />
      <label
        className="rating__label"
        htmlFor="star-1"
      >
        Rating 
        1
      </label>
      <input
        checked={false}
        className="rating__input"
        id="star-2"
        name="rating"
        onChange={[Function]}
        type="radio"
        value="2"
      />
      <label
        className="rating__label"
        htmlFor="star-2"
      >
        Rating 
        2
      </label>
      <input
        checked={false}
        className="rating__input"
        id="star-3"
        name="rating"
        onChange={[Function]}
        type="radio"
        value="3"
      />
      <label
        className="rating__label"
        htmlFor="star-3"
      >
        Rating 
        3
      </label>
      <input
        checked={false}
        className="rating__input"
        id="star-4"
        name="rating"
        onChange={[Function]}
        type="radio"
        value="4"
      />
      <label
        className="rating__label"
        htmlFor="star-4"
      >
        Rating 
        4
      </label>
      <input
        checked={true}
        className="rating__input"
        id="star-5"
        name="rating"
        onChange={[Function]}
        type="radio"
        value="5"
      />
      <label
        className="rating__label"
        htmlFor="star-5"
      >
        Rating 
        5
      </label>
    </div>
  </div>
  <div
    className="add-review__text"
  >
    <textarea
      className="add-review__textarea"
      id="review-text"
      name="review-text"
      onChange={[Function]}
      placeholder="Review text"
      value="A good review includes enough detail to give others a feel for what happened."
    />
    <div
      className="add-review__submit"
    >
      <button
        className="add-review__btn"
        disabled={false}
        type="submit"
      >
        Post
      </button>
    </div>
  </div>
</form>
`;

exports[`ReviewForm Should render with submit button disabled when no text or rate 1`] = `
<form
  action="#"
  className="add-review__form"
  onSubmit={[Function]}
>
  <div
    className="rating"
  >
    <div
      className="rating__stars"
    >
      <input
        checked={true}
        className="rating__input"
        id="star-0"
        name="rating"
        onChange={[Function]}
        type="radio"
        value="0"
      />
      <label
        className="visually-hidden rating__label"
        htmlFor="star-0"
      >
        Rating 
        0
      </label>
      <input
        checked={false}
        className="rating__input"
        id="star-1"
        name="rating"
        onChange={[Function]}
        type="radio"
        value="1"
      />
      <label
        className="rating__label"
        htmlFor="star-1"
      >
        Rating 
        1
      </label>
      <input
        checked={false}
        className="rating__input"
        id="star-2"
        name="rating"
        onChange={[Function]}
        type="radio"
        value="2"
      />
      <label
        className="rating__label"
        htmlFor="star-2"
      >
        Rating 
        2
      </label>
      <input
        checked={false}
        className="rating__input"
        id="star-3"
        name="rating"
        onChange={[Function]}
        type="radio"
        value="3"
      />
      <label
        className="rating__label"
        htmlFor="star-3"
      >
        Rating 
        3
      </label>
      <input
        checked={false}
        className="rating__input"
        id="star-4"
        name="rating"
        onChange={[Function]}
        type="radio"
        value="4"
      />
      <label
        className="rating__label"
        htmlFor="star-4"
      >
        Rating 
        4
      </label>
      <input
        checked={false}
        className="rating__input"
        id="star-5"
        name="rating"
        onChange={[Function]}
        type="radio"
        value="5"
      />
      <label
        className="rating__label"
        htmlFor="star-5"
      >
        Rating 
        5
      </label>
    </div>
  </div>
  <div
    className="add-review__text"
  >
    <textarea
      className="add-review__textarea"
      id="review-text"
      name="review-text"
      onChange={[Function]}
      placeholder="Review text"
      value=""
    />
    <div
      className="add-review__submit"
    >
      <button
        className="add-review__btn"
        disabled={true}
        type="submit"
      >
        Post
      </button>
    </div>
  </div>
</form>
`;

exports[`ReviewForm Should render with submit button disabled when rate only 1`] = `
<form
  action="#"
  className="add-review__form"
  onSubmit={[Function]}
>
  <div
    className="rating"
  >
    <div
      className="rating__stars"
    >
      <input
        checked={false}
        className="rating__input"
        id="star-0"
        name="rating"
        onChange={[Function]}
        type="radio"
        value="0"
      />
      <label
        className="visually-hidden rating__label"
        htmlFor="star-0"
      >
        Rating 
        0
      </label>
      <input
        checked={false}
        className="rating__input"
        id="star-1"
        name="rating"
        onChange={[Function]}
        type="radio"
        value="1"
      />
      <label
        className="rating__label"
        htmlFor="star-1"
      >
        Rating 
        1
      </label>
      <input
        checked={true}
        className="rating__input"
        id="star-2"
        name="rating"
        onChange={[Function]}
        type="radio"
        value="2"
      />
      <label
        className="rating__label"
        htmlFor="star-2"
      >
        Rating 
        2
      </label>
      <input
        checked={false}
        className="rating__input"
        id="star-3"
        name="rating"
        onChange={[Function]}
        type="radio"
        value="3"
      />
      <label
        className="rating__label"
        htmlFor="star-3"
      >
        Rating 
        3
      </label>
      <input
        checked={false}
        className="rating__input"
        id="star-4"
        name="rating"
        onChange={[Function]}
        type="radio"
        value="4"
      />
      <label
        className="rating__label"
        htmlFor="star-4"
      >
        Rating 
        4
      </label>
      <input
        checked={false}
        className="rating__input"
        id="star-5"
        name="rating"
        onChange={[Function]}
        type="radio"
        value="5"
      />
      <label
        className="rating__label"
        htmlFor="star-5"
      >
        Rating 
        5
      </label>
    </div>
  </div>
  <div
    className="add-review__text"
  >
    <textarea
      className="add-review__textarea"
      id="review-text"
      name="review-text"
      onChange={[Function]}
      placeholder="Review text"
      value=""
    />
    <div
      className="add-review__submit"
    >
      <button
        className="add-review__btn"
        disabled={true}
        type="submit"
      >
        Post
      </button>
    </div>
  </div>
</form>
`;

exports[`ReviewForm Should render with submit button disabled when short text and rate 1`] = `
<form
  action="#"
  className="add-review__form"
  onSubmit={[Function]}
>
  <div
    className="rating"
  >
    <div
      className="rating__stars"
    >
      <input
        checked={false}
        className="rating__input"
        id="star-0"
        name="rating"
        onChange={[Function]}
        type="radio"
        value="0"
      />
      <label
        className="visually-hidden rating__label"
        htmlFor="star-0"
      >
        Rating 
        0
      </label>
      <input
        checked={false}
        className="rating__input"
        id="star-1"
        name="rating"
        onChange={[Function]}
        type="radio"
        value="1"
      />
      <label
        className="rating__label"
        htmlFor="star-1"
      >
        Rating 
        1
      </label>
      <input
        checked={true}
        className="rating__input"
        id="star-2"
        name="rating"
        onChange={[Function]}
        type="radio"
        value="2"
      />
      <label
        className="rating__label"
        htmlFor="star-2"
      >
        Rating 
        2
      </label>
      <input
        checked={false}
        className="rating__input"
        id="star-3"
        name="rating"
        onChange={[Function]}
        type="radio"
        value="3"
      />
      <label
        className="rating__label"
        htmlFor="star-3"
      >
        Rating 
        3
      </label>
      <input
        checked={false}
        className="rating__input"
        id="star-4"
        name="rating"
        onChange={[Function]}
        type="radio"
        value="4"
      />
      <label
        className="rating__label"
        htmlFor="star-4"
      >
        Rating 
        4
      </label>
      <input
        checked={false}
        className="rating__input"
        id="star-5"
        name="rating"
        onChange={[Function]}
        type="radio"
        value="5"
      />
      <label
        className="rating__label"
        htmlFor="star-5"
      >
        Rating 
        5
      </label>
    </div>
  </div>
  <div
    className="add-review__text"
  >
    <textarea
      className="add-review__textarea"
      id="review-text"
      name="review-text"
      onChange={[Function]}
      placeholder="Review text"
      value="Some review text"
    />
    <div
      className="add-review__submit"
    >
      <button
        className="add-review__btn"
        disabled={true}
        type="submit"
      >
        Post
      </button>
    </div>
  </div>
</form>
`;

exports[`ReviewForm Should render with submit button disabled when text only 1`] = `
<form
  action="#"
  className="add-review__form"
  onSubmit={[Function]}
>
  <div
    className="rating"
  >
    <div
      className="rating__stars"
    >
      <input
        checked={true}
        className="rating__input"
        id="star-0"
        name="rating"
        onChange={[Function]}
        type="radio"
        value="0"
      />
      <label
        className="visually-hidden rating__label"
        htmlFor="star-0"
      >
        Rating 
        0
      </label>
      <input
        checked={false}
        className="rating__input"
        id="star-1"
        name="rating"
        onChange={[Function]}
        type="radio"
        value="1"
      />
      <label
        className="rating__label"
        htmlFor="star-1"
      >
        Rating 
        1
      </label>
      <input
        checked={false}
        className="rating__input"
        id="star-2"
        name="rating"
        onChange={[Function]}
        type="radio"
        value="2"
      />
      <label
        className="rating__label"
        htmlFor="star-2"
      >
        Rating 
        2
      </label>
      <input
        checked={false}
        className="rating__input"
        id="star-3"
        name="rating"
        onChange={[Function]}
        type="radio"
        value="3"
      />
      <label
        className="rating__label"
        htmlFor="star-3"
      >
        Rating 
        3
      </label>
      <input
        checked={false}
        className="rating__input"
        id="star-4"
        name="rating"
        onChange={[Function]}
        type="radio"
        value="4"
      />
      <label
        className="rating__label"
        htmlFor="star-4"
      >
        Rating 
        4
      </label>
      <input
        checked={false}
        className="rating__input"
        id="star-5"
        name="rating"
        onChange={[Function]}
        type="radio"
        value="5"
      />
      <label
        className="rating__label"
        htmlFor="star-5"
      >
        Rating 
        5
      </label>
    </div>
  </div>
  <div
    className="add-review__text"
  >
    <textarea
      className="add-review__textarea"
      id="review-text"
      name="review-text"
      onChange={[Function]}
      placeholder="Review text"
      value="A good review includes enough detail to give others a feel for what happened."
    />
    <div
      className="add-review__submit"
    >
      <button
        className="add-review__btn"
        disabled={true}
        type="submit"
      >
        Post
      </button>
    </div>
  </div>
</form>
`;

exports[`ReviewForm Should render with submit button enabled when long text and rate 1`] = `
<form
  action="#"
  className="add-review__form"
  onSubmit={[Function]}
>
  <div
    className="rating"
  >
    <div
      className="rating__stars"
    >
      <input
        checked={false}
        className="rating__input"
        id="star-0"
        name="rating"
        onChange={[Function]}
        type="radio"
        value="0"
      />
      <label
        className="visually-hidden rating__label"
        htmlFor="star-0"
      >
        Rating 
        0
      </label>
      <input
        checked={false}
        className="rating__input"
        id="star-1"
        name="rating"
        onChange={[Function]}
        type="radio"
        value="1"
      />
      <label
        className="rating__label"
        htmlFor="star-1"
      >
        Rating 
        1
      </label>
      <input
        checked={true}
        className="rating__input"
        id="star-2"
        name="rating"
        onChange={[Function]}
        type="radio"
        value="2"
      />
      <label
        className="rating__label"
        htmlFor="star-2"
      >
        Rating 
        2
      </label>
      <input
        checked={false}
        className="rating__input"
        id="star-3"
        name="rating"
        onChange={[Function]}
        type="radio"
        value="3"
      />
      <label
        className="rating__label"
        htmlFor="star-3"
      >
        Rating 
        3
      </label>
      <input
        checked={false}
        className="rating__input"
        id="star-4"
        name="rating"
        onChange={[Function]}
        type="radio"
        value="4"
      />
      <label
        className="rating__label"
        htmlFor="star-4"
      >
        Rating 
        4
      </label>
      <input
        checked={false}
        className="rating__input"
        id="star-5"
        name="rating"
        onChange={[Function]}
        type="radio"
        value="5"
      />
      <label
        className="rating__label"
        htmlFor="star-5"
      >
        Rating 
        5
      </label>
    </div>
  </div>
  <div
    className="add-review__text"
  >
    <textarea
      className="add-review__textarea"
      id="review-text"
      name="review-text"
      onChange={[Function]}
      placeholder="Review text"
      value="A good review includes enough detail to give others a feel for what happened."
    />
    <div
      className="add-review__submit"
    >
      <button
        className="add-review__btn"
        disabled={false}
        type="submit"
      >
        Post
      </button>
    </div>
  </div>
</form>
`;
